--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -58,6 +58,11 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!-- cloudinary --><!--
         <dependency>
