--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.5.2</version>
-        <relativePath/> <!-- lookup parent from com.fanficApp.repository -->
+        <relativePath/>
     </parent>
 
     <groupId>org.twigger</groupId>
